--- a/pagination/index.html
+++ b/pagination/index.html
@@ -7,8 +7,24 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div id="categories" class="category-container"></div>
-    <div id="pagination" class="pagination-container"></div>
+    <div class="container">
+        <h1>Categories</h1>
+        <table id="categories-table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Is Published</th>
+                    <th>Created At</th>
+                    <th>Updated At</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Data kategori akan dimasukkan di sini oleh JavaScript -->
+            </tbody>
+        </table>
+        <div id="pagination" class="pagination-container"></div>
+    </div>
 
     <script type="module" src="js/main.js"></script>
 </body>
