--- a/search/index.html
+++ b/search/index.html
@@ -11,7 +11,7 @@
         <h1>Categories</h1>
         
         <!-- Input pencarian -->
-        <input type="text" id="search-input" placeholder="Search categories..." oninput="handleSearch(event)" />
+        <input type="text" id="search-input" placeholder="Search categories..."/>
 
         <table id="categories-table">
             <thead>
